css/style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700');

/* The navigation bar */
.navbar {
  overflow: hidden;
  background-color: #333;
  position: fixed; /* Set the navbar to fixed position */
  z-index: 999;
  top: 0; /* Position the navbar at the top of the page */
  width: 100%; /* Full width */
  text-align: center;
}

/* Links inside the navbar */
.navbar a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

/* Change background on mouse-over */
.navbar a:hover {
  background: #ddd;
  color: black;
}



/* Home header/hero image */
.hero-image {
  /* Use "linear-gradient" to make text more readable.*/
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../imgs/hero.jpg");
  height: 100vh;
  width: 100%;
  right: 200%;
  left: 0%;
 

  /* Position and center the image to scale nicely on all screens */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  margin-top: 0;
  margin-bottom: 70pt;
}
section{ 
  margin-top: 0; 
  margin-bottom: 17em;
  width: 100%;
}
#home-info{
  display: inline-block;
  margin-bottom: 40em;
  width: 70%;
  height: 10em;
  text-anchor: center;
}
#home-video {
  max-width: 40em;
  width: 45%;
  height: 15em;
 
  margin: 0;
  float: left;
}

#home-video-info{
  width: 30%;
  text-align: left;
  margin: 0;
  margin-top: -1em;
  padding-left: -150em;
  float:  right;
}







/* Place text in the middle of the image */
.heroContent {
  padding-top: 30px;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

.heroContent h1{
  color: white;
  font-size: 50pt;
}
.heroContent p{
  font-size: 20px;
  font-weight: 400;
  margin: 40px 0;
}
.container .btn , .btnViewAll {
  font-size: 25px;
  font-weight: 400;
  padding: 7 12;
}

.btnViewAll {
  display: inline-block;
  margin: 70px auto 150px auto;
  padding: 5px 10px;
  border: 1px solid;
  border-radius: 3px;
  
}

.container .btn {
  font-size: 20px;
  font-weight: 200;
  width: 17em;
  color: rgba(52, 73, 94,1.0);  
  border-color: rgba(52, 73, 94,1.0);
}

body{
  margin: 0;
  padding: 0;
  font-family: 'Montserrat', sans-serif;
  text-align: center;
  margin: 70px 15px 0px 15px;
}
a{
  transition: all .5s;
  text-decoration: none;
  color: #fff;

}
img{
  width: 100%;
  transition: all .5s;
}

.container{
  max-width: 1200px;
  width: 100%;
  padding-top: 45px;
  margin: 0 auto;
}
main{
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 30px;
 
  max-width: 1080px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  width: 90%;
}
header{
  width: 70%;
  margin: 0 auto;
}
h1, h2{
  margin: 0;
  font-size: 50pt;
  color: rgba(52, 73, 94,1.0);
  font-weight: 500;
}
h2 {
  font-size: 39pt;
  margin-bottom: 30px;
}
footer {
  margin: 100px auto 0 auto;
  bottom: 0;
  margin: 0;
  padding: 50px 0;
  height: 100%;

  background-color: #333;  
}
.singleBlog{
  position: relative;
  overflow: hidden;
  max-height: 580px;
  height: 100%;
  box-sizing: border-box;
  box-shadow: 0 2px 10px #ccc;
  transition: all .5s;
}
.singleBlog:hover{
  box-shadow: 0 2px 13px #ccc;
  transition: all .5s;
}
.singleBlog:hover img{
  transform: scale(1.1);
  transition: all .4s;
}
.campContent{ /* Section title, author, date, etc. */
  position: absolute;
  left: 0;
  bottom: -45px;
  width: 100%;
  color: #fff;
  padding: 10px 5px;
  background: linear-gradient(45deg, rgb(173, 83, 22) 0%,rgba(5, 4, 4, 0.4) 100%);
  transition: all .5s;
}
.singleBlog:hover .campContent{
  bottom: 0;
  transition: all .5s;
}

.campContent h3{
  font-size: 20px;
  font-weight: 500;
  margin: 0;
}
.campContent h3 span{
  display: block;
  font-size: 60%;
  margin-top: 5px;
  font-weight: 600;
  font-weight: 300;
  font-style: italic;
  color: rgb(248, 248, 248)
}

.campContent a{
  font-size: 14px;
  font-weight: 500;
}
.btn{
  display: inline-block;
  padding: 5px 10px;
  border: 1px solid #fff;
  border-radius: 3px;
  font-weight: 400;
}
.btn:hover , .btnViewAll:hover {
  background: rgba(52, 152, 219,1.0);
  transition: all .5s;
  text-decoration: none;
}
.campContent a:hover{
  text-decoration: underline;
}
















@media (max-width:992px) {
  main{
    grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
  }
}
@media (max-width:767px) {
  main{
    grid-template-columns: repeat(2, 1fr);
  grid-gap: 15px;
  }
  header{
    width: 95%;
  }
  .campContent{
    bottom: 0;
  }
}
@media (max-width:500px) {

    main{
      grid-template-columns: repeat(1, 1fr);
    }
}

